; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_ringbuffer.c_i9xx_add_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_ringbuffer.c_i9xx_add_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_ring_buffer = type { i32 }

@MI_STORE_DWORD_INDEX = common dso_local global i32 0, align 4
@I915_GEM_HWS_INDEX = common dso_local global i32 0, align 4
@MI_STORE_DWORD_INDEX_SHIFT = common dso_local global i32 0, align 4
@MI_USER_INTERRUPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.intel_ring_buffer*)* @i9xx_add_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i9xx_add_request(%struct.intel_ring_buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.intel_ring_buffer*, align 8
  %4 = alloca i32, align 4
  store %struct.intel_ring_buffer* %0, %struct.intel_ring_buffer** %3, align 8
  %5 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %6 = call i32 @intel_ring_begin(%struct.intel_ring_buffer* %5, i32 4)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %30

11:                                               ; preds = %1
  %12 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %13 = load i32, i32* @MI_STORE_DWORD_INDEX, align 4
  %14 = call i32 @intel_ring_emit(%struct.intel_ring_buffer* %12, i32 %13)
  %15 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %16 = load i32, i32* @I915_GEM_HWS_INDEX, align 4
  %17 = load i32, i32* @MI_STORE_DWORD_INDEX_SHIFT, align 4
  %18 = shl i32 %16, %17
  %19 = call i32 @intel_ring_emit(%struct.intel_ring_buffer* %15, i32 %18)
  %20 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %21 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %22 = getelementptr inbounds %struct.intel_ring_buffer, %struct.intel_ring_buffer* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @intel_ring_emit(%struct.intel_ring_buffer* %20, i32 %23)
  %25 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %26 = load i32, i32* @MI_USER_INTERRUPT, align 4
  %27 = call i32 @intel_ring_emit(%struct.intel_ring_buffer* %25, i32 %26)
  %28 = load %struct.intel_ring_buffer*, %struct.intel_ring_buffer** %3, align 8
  %29 = call i32 @intel_ring_advance(%struct.intel_ring_buffer* %28)
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %11, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @intel_ring_begin(%struct.intel_ring_buffer*, i32) #1

declare dso_local i32 @intel_ring_emit(%struct.intel_ring_buffer*, i32) #1

declare dso_local i32 @intel_ring_advance(%struct.intel_ring_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
